--- a/products.html
+++ b/products.html
@@ -31,18 +31,26 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+              <a class="nav-link" href="login.html">Iniciar Sesión</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <main class="pb-5 container">
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
-    </div>
-  </main>
+
+<!--Lista de los productos-->
+
+<main class="pb-5 container">
+  <div class="text-center p-4">
+    <h1>Autos</h1>
+    <p class="lead">Esta es la lista de autos disponibles:</p>
+  </div>
+<div class="container" id="lista"></div>
+
+</main>
+    
+    <!-- Fin de la lista -->
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
