Se le agrego la ID a Google OAuth

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 <body>
 
   <button class="btn btn-lg" onClick="regresar()">Regresar</button>
-
+  
   <!-- Inicio de sesion creado con clases de bootstrap -->
 
   <div class="col-md-10 mx-auto col-lg-5">
@@ -38,13 +38,13 @@
   </div>
 
 
-                      <!-- Autorizacion de Google -->
+                <!-- Autorizacion de Google -->
 
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <meta name="google-signin-client_id" content="YOUR_CLIENT_ID">
-    <div class="g-signin2" data-onsuccess="handleCredentialResponse"></div>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="324409693179-2qou6usiiorq54qi0uv148ul9eh3da2k.apps.googleusercontent.com">
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
-<!-- Fin de inicio de sesión -->
+    <!-- Fin de inicio de sesión -->
 
   <footer class="text-muted">
     <div class="container">
