--- a/products.html
+++ b/products.html
@@ -38,18 +38,71 @@
     </div>
   </nav>
 
-<!--Lista de los productos-->
+<!--Titulo y descripcion de productos-->
 
 <main class="pb-5 container">
-  <div class="text-center p-4">
-    <h1>Autos</h1>
-    <p class="lead">Esta es la lista de autos disponibles:</p>
+  <div class="text-center p-4" id="productos">
+    <h1 id="titleCat"></h1>
+    <p class="lead">Los mejores <strong id="nombreCat"></strong>, los encuentras aquí:</p>
   </div>
+  
+  <div class="container">
+    <div class="row">
+
+      <!-- Boton de búsqueda -->
+      <div class="col-3">
+        <input type="text" class="form-control" placeholder="Busqueda" aria-label="Busqueda" aria-describedby="basic-addon2" id="searchInput">
+      </div>
+      <div class="col-3 p-0">
+        <button class="btn btn-light btn-block" type="button" id="search">Buscar</button>
+      </div>
+
+       <!-- Botones de filtrado -->
+
+      <div class="col text-end">
+        <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
+          <input type="radio" class="btn-check" name="options" id="sortAsc">
+          <label class="btn btn-light" for="sortAsc">A-Z</label>
+          <input type="radio" class="btn-check" name="options" id="sortDesc">
+          <label class="btn btn-light" for="sortDesc">Z-A</label>
+          <input type="radio" class="btn-check" name="options" id="priceAsc">
+          <label class="btn btn-light" for="priceAsc">Menor a Mayor</label>
+          <input type="radio" class="btn-check" name="options" id="priceDesc">
+          <label class="btn btn-light" for="priceDesc">Mayor a Menor</label>
+          <input type="radio" class="btn-check" name="options" id="sortByCount" checked>
+          <label class="btn btn-light" for="sortByCount"><i class="fas fa-sort-amount-down mr-1"></i></label>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
+        <div class="row container p-0 m-0">
+          <div class="col">
+            <p class="font-weight-normal text-end my-2">Cant.</p>
+          </div>
+          <div class="col">
+            <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
+          </div>
+          <div class="col">
+            <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
+          </div>
+          <div class="col-3 p-0">
+            <div class="btn-group" role="group">
+              <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
+              <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  <!-- Comienzo de la lista -->
+
 <div class="container" id="lista"></div>
 
+  <!-- Fin de la lista -->
+
 </main>
-    
-    <!-- Fin de la lista -->
 
   <footer class="text-muted">
     <div class="container">
