--- a/categories.html
+++ b/categories.html
@@ -30,6 +30,8 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
+
+          <!--Dropdown para Inicio de Sesión-->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="user">
               Inicio de Sesión
