--- a/products.html
+++ b/products.html
@@ -30,10 +30,19 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
-              <a class="nav-link" href="login.html">Iniciar Sesión</a>
-          </li>
-        </ul>
+        
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="user">
+            Inicio de Sesión
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark">
+            <li><a class="dropdown-item" href="login.html">Iniciar Sesión</a></li>
+            <li><a class="dropdown-item" href="my-profile.html">Perfil</a></li>
+            <li><a class="dropdown-item" href="cart.html">Carrito de Compras</a></li>
+            <li><a class="dropdown-item" onClick="cerrarSesion()">Cerrar Sesión</a></li>
+          </ul>
+        </li>
+      </ul>
       </div>
     </div>
   </nav>
