--- a/products.html
+++ b/products.html
@@ -63,7 +63,7 @@
         <input type="text" class="form-control" placeholder="Busqueda" aria-label="Busqueda" aria-describedby="basic-addon2" id="searchInput">
       </div>
       <div class="col-3 p-0">
-        <button class="btn btn-light btn-block" type="button" id="search">Buscar</button>
+        <button class="btn btn-outline-dark btn-block" type="button" id="search">Buscar</button>
       </div>
 
        <!-- Botones de filtrado -->
@@ -71,15 +71,15 @@
       <div class="col text-end">
         <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
           <input type="radio" class="btn-check" name="options" id="sortAsc">
-          <label class="btn btn-light" for="sortAsc">A-Z</label>
+          <label class="btn btn-outline-dark btn-light" for="sortAsc">A-Z</label>
           <input type="radio" class="btn-check" name="options" id="sortDesc">
-          <label class="btn btn-light" for="sortDesc">Z-A</label>
+          <label class="btn btn-outline-dark btn-light" for="sortDesc">Z-A</label>
           <input type="radio" class="btn-check" name="options" id="priceAsc">
-          <label class="btn btn-light" for="priceAsc">Menor a Mayor</label>
+          <label class="btn btn-outline-dark btn-light" for="priceAsc">Menor a Mayor</label>
           <input type="radio" class="btn-check" name="options" id="priceDesc">
-          <label class="btn btn-light" for="priceDesc">Mayor a Menor</label>
+          <label class="btn btn-outline-dark btn-light" for="priceDesc">Mayor a Menor</label>
           <input type="radio" class="btn-check" name="options" id="sortByCount" checked>
-          <label class="btn btn-light" for="sortByCount"><i class="fas fa-sort-amount-down mr-1"></i></label>
+          <label class="btn btn-outline-dark btn-light" for="sortByCount"><i class="fas fa-sort-amount-down mr-1"></i></label>
         </div>
       </div>
     </div>
@@ -97,8 +97,8 @@
           </div>
           <div class="col-3 p-0">
             <div class="btn-group" role="group">
-              <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
-              <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
+              <button class="btn btn-outline-dark btn-light btn-block" id="rangeFilterCount">Filtrar</button>
+              <button class="btn btn-outline-danger btn-sm" id="clearRangeFilter">Limpiar</button>
             </div>
           </div>
         </div>
