--- a/index.html
+++ b/index.html
@@ -110,32 +110,21 @@
     function loginUser() {
       let user = document.getElementById("user");
       let getUserInput = localStorage.getItem("userInput");
-
+    
       if (getUserInput === 'null') {
       user.innerHTML = "Inicio de Sesión";
-    } else {
+      } else {
       user.innerHTML = getUserInput;
+      }
     }
-  }
 
-    /* Cierra sesión ficticia, quita el item del local Storage 
+    /* Cierra sesión, quita el item del local Storage 
       y reinicia el nombre de la etiqueta*/
     
     function cerrarSesion() {
       localStorage.removeItem("userInput");
       user.innerHTML = "Inicio de Sesión";
     }
-
-
-    //En desarrollo. Para tener las dos funciones andando y corregir error en el boton
-
-    /* function carga() {
-      if (getUserInput == null) {
-        user.innerHTML = "Inicio de Sesión"; 
-      } else {
-        user.innerHTML = getUserInput;
-      }
-    } */
   </script>
 
 </body>
