Entrega 5, sin desafío

--- a/product-info.html
+++ b/product-info.html
@@ -52,7 +52,8 @@
 
     <!-- Lista INFO -->
 <div class="container p-4">
-  <div id="infoLista"></div>
+  <div id="infoLista">
+  </div>
 
     <!-- Carrusel Imagenes -->
   <div class="m-0 row">
