--- a/my-profile.html
+++ b/my-profile.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" rel="stylesheet">
   <style>
     .bd-placeholder-img {
       font-size: 1.125rem;
@@ -51,10 +52,10 @@
               Inicio de Sesión
             </a>
             <ul class="dropdown-menu dropdown-menu-dark">
-              <li><a class="dropdown-item" href="login.html">Iniciar Sesión</a></li>
-              <li><a class="dropdown-item" href="my-profile.html">Perfil</a></li>
-              <li><a class="dropdown-item" href="cart.html">Carrito de Compras</a></li>
-              <li><a class="dropdown-item" onClick="cerrarSesion()">Cerrar Sesión</a></li>
+              <li><a class="dropdown-item" href="login.html"><i class="bi bi-door-open-fill"></i> Iniciar Sesión</a></li>
+              <li><a class="dropdown-item" href="my-profile.html"><i class="bi bi-person-fill"></i> Perfil</a></li>
+              <li><a class="dropdown-item" href="cart.html"><i class="bi bi-cart4"></i> Carrito de Compras</a></li>
+              <li><a class="dropdown-item" onClick="cerrarSesion()"><i class="bi bi-box-arrow-left"></i> Cerrar Sesión</a></li>
             </ul>
           </li>
         </ul>
