--- a/product-info.html
+++ b/product-info.html
@@ -38,10 +38,10 @@
               Inicio de Sesión
             </a>
             <ul class="dropdown-menu dropdown-menu-dark">
-              <li><a class="dropdown-item" href="login.html">Iniciar Sesión</a></li>
-              <li><a class="dropdown-item" href="my-profile.html">Perfil</a></li>
-              <li><a class="dropdown-item" href="cart.html">Carrito de Compras</a></li>
-              <li><a class="dropdown-item" onClick="cerrarSesion()">Cerrar Sesión</a></li>
+              <li><a class="dropdown-item" href="login.html"><i class="bi bi-door-open-fill"></i> Iniciar Sesión</a></li>
+              <li><a class="dropdown-item" href="my-profile.html"><i class="bi bi-person-fill"></i> Perfil</a></li>
+              <li><a class="dropdown-item" href="cart.html"><i class="bi bi-cart4"></i> Carrito de Compras</a></li>
+              <li><a class="dropdown-item" onClick="cerrarSesion()"><i class="bi bi-box-arrow-left"></i> Cerrar Sesión</a></li>
             </ul>
           </li>
         </ul>
