--- a/sell.html
+++ b/sell.html
@@ -9,6 +9,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/dropzone.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 
 <body onload="loginUser()">
@@ -36,10 +37,10 @@
               Inicio de Sesión
             </a>
             <ul class="dropdown-menu dropdown-menu-dark">
-              <li><a class="dropdown-item" href="login.html">Iniciar Sesión</a></li>
-              <li><a class="dropdown-item" href="my-profile.html">Perfil</a></li>
-              <li><a class="dropdown-item" href="cart.html">Carrito de Compras</a></li>
-              <li><a class="dropdown-item" onClick="cerrarSesion()">Cerrar Sesión</a></li>
+              <li><a class="dropdown-item" href="login.html"><i class="bi bi-door-open-fill"></i> Iniciar Sesión</a></li>
+              <li><a class="dropdown-item" href="my-profile.html"><i class="bi bi-person-fill"></i> Perfil</a></li>
+              <li><a class="dropdown-item" href="cart.html"><i class="bi bi-cart4"></i> Carrito de Compras</a></li>
+              <li><a class="dropdown-item" onClick="cerrarSesion()"><i class="bi bi-box-arrow-left"></i> Cerrar Sesión</a></li>
             </ul>
           </li>
         </ul>
