--- a/cart.html
+++ b/cart.html
@@ -40,6 +40,7 @@
               <li><a class="dropdown-item" href="login.html"><i class="bi bi-door-open-fill"></i> Iniciar Sesión</a></li>
               <li><a class="dropdown-item" href="my-profile.html"><i class="bi bi-person-fill"></i> Perfil</a></li>
               <li><a class="dropdown-item" href="cart.html"><i class="bi bi-cart4"></i> Carrito de Compras</a></li>
+              <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" onClick="cerrarSesion()"><i class="bi bi-box-arrow-left"></i> Cerrar Sesión</a></li>
             </ul>
           </li>
@@ -50,7 +51,7 @@
   </nav>
   <main class="pb5">
   
-    <!-- Table base del carrito donde se agrega el producto seleccionado -->
+    <!-- Tabla base del carrito donde se agrega el producto seleccionado -->
     <div class="container p-4">
       <h1 class="text-center">Carrito de Compras</h1><br>
   
