--- a/login.html
+++ b/login.html
@@ -45,6 +45,7 @@
               <li><a class="dropdown-item" href="login.html"><i class="bi bi-door-open-fill"></i> Iniciar Sesión</a></li>
               <li><a class="dropdown-item" href="my-profile.html"><i class="bi bi-person-fill"></i> Perfil</a></li>
               <li><a class="dropdown-item" href="cart.html"><i class="bi bi-cart4"></i> Carrito de Compras</a></li>
+              <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" onClick="cerrarSesion()"><i class="bi bi-box-arrow-left"></i> Cerrar Sesión</a></li>
             </ul>
           </li>
@@ -53,7 +54,7 @@
       </div>
     </div>
   </nav>
-  <button class="btn-dark bg-dark" onClick="regresar()" id="regresar">Regresar</button>
+  <button class="btn-dark bg-dark btn-md" onClick="regresar()" id="regresar"><i class="bi bi-arrow-return-left"></i> Regresar</button>
   
   <!-- Inicio de sesion creado con clases de bootstrap -->
 
