--- a/product-info.html
+++ b/product-info.html
@@ -41,6 +41,7 @@
               <li><a class="dropdown-item" href="login.html"><i class="bi bi-door-open-fill"></i> Iniciar Sesión</a></li>
               <li><a class="dropdown-item" href="my-profile.html"><i class="bi bi-person-fill"></i> Perfil</a></li>
               <li><a class="dropdown-item" href="cart.html"><i class="bi bi-cart4"></i> Carrito de Compras</a></li>
+              <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" onClick="cerrarSesion()"><i class="bi bi-box-arrow-left"></i> Cerrar Sesión</a></li>
             </ul>
           </li>
@@ -58,32 +59,35 @@
 
     <!-- Carrusel Imagenes -->
   <div class="m-0 row">
-    <div id="carouselExampleControls" class="carousel slide w-50 p-3 " data-bs-ride="carousel">
-      <div id="infoImagenes" class="carousel-inner">
+      <div id="carouselExampleControls" class="carousel slide w-50 p-3 " data-bs-ride="carousel">
+        <div id="infoImagenes" class="carousel-inner">
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
   </div>
-
+  <br>
+    <!-- COMENTARIOS -->
   <div id="infoComments" class="row"></div>
 
   <div id="comentarioNuevo" class="row"></div>
   <br>
   <div class="container" id="cajaComentario">
-    <textarea class="form-control" id="userComment" rows="4" placeholder="Haz un comentario sobre este producto"></textarea>
-    <input type="number" class="form-control" id="puntuacion" min="1" max="5" placeholder="¿⭐? - ¡Puntúa este producto!">
-    <button class="btn btn-primary mt-3" id="enviarComment">Comentar</button>
+    <hr>
+    <label for="userComment"><strong>Haz un comentario:</strong></label>
+    <textarea class="form-control" id="userComment" rows="4" placeholder="Tu opinión nos interesa"></textarea>
+    <input type="number" class="form-control" id="puntuacion" min="1" max="5" placeholder="¿⭐? - ¡Puntúa este producto!"><br>
+    <button class="btn btn-primary btn-lg" id="enviarComment">Comentar</button>
   </div>
-  
+  <br>
   <div id="prodRelacionados" class="col-30 row align-items-start"></div>
 </div>
     <!-- /Lista INFO -->
