ultimas correciones entrega 6

--- a/cart.html
+++ b/cart.html
@@ -143,7 +143,7 @@
         </li> <!-- subtotalInicial -->
         <li class="list-group-item list-group-item-action">
           <p class="mb-1">Costo de envío</p>
-          <p class="mb-1" id="shippingCost"></p>
+          <span class="mb-1" id="shippingCost"></span>
           <p class="mb-1 small">Según el tipo de envío</p>
         </li> <!-- shippingCost -->
         <li class="list-group-item list-group-item-action">
@@ -307,6 +307,7 @@
       user.innerHTML = "Inicio de Sesión";
     }
   </script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </body>
 
