--- a/my-profile.html
+++ b/my-profile.html
@@ -66,6 +66,7 @@
   </nav>
   <main class="pb-5">
     <div class="container">
+      <form action="#" method="get" class="row mt-4 needs-validation" novalidate>
       <div class="row">
         <div class="col">
           <br>
@@ -76,11 +77,14 @@
         </div>
       </div>
       <hr>
-  
+      
       <div class="row p-3">
         <div class="col-md-5">
           <label for="nombre" class="form-label">Primer nombre<strong>*</strong></label>
-          <input type="text" class="form-control" id="nombre" required placeholder="Primer nombre">
+          <input type="text" class="form-control" id="nombre" placeholder="Primer nombre" required onchange="saveProfileData()">
+          <div class="valid-feedback">
+            ¡Hola!
+          </div>
           <div class="invalid-feedback">
             Ingresar al menos un nombre, es obligatorio.
           </div>
@@ -94,7 +98,10 @@
       <div class="row p-3">
         <div class="col-md-5">
           <label for="apellido" class="form-label">Primer apellido<strong>*</strong></label>
-          <input type="text" class="form-control" id="apellido" required placeholder="Primer apellido">
+          <input type="text" class="form-control" id="apellido" placeholder="Primer apellido" required>
+          <div class="valid-feedback">
+            ¡Genial!
+          </div>
           <div class="invalid-feedback">
             Ingresar un apellido es requerido.
           </div>
@@ -119,7 +126,10 @@
       <div class="row p-3">
         <div class="col-md-5">
           <label for="tel" class="form-label">Telefono de Contacto<strong>*</strong></label>
-          <input type="number" class="form-control" id="tel" placeholder="0303-456" min="1">
+          <input type="number" class="form-control" id="tel" placeholder="0303-456" min="1" required>
+          <div class="valid-feedback">
+            ¡Se ve bien!
+          </div>
           <div class="invalid-feedback">
             Ingrese un teléfono válido.
           </div>
@@ -127,10 +137,9 @@
       </div>
       <br><br><br>
       <hr>
-  
-      <button type="button" class="btn btn-primary" id="save" onclick="validate()">Guardar cambios</button>
-  
+      <button type="submit" class="btn btn-primary" onclick="validate()">Guardar cambios</button>
     </div>
+    </form>
   </main>
   <footer class="text-muted">
     <div class="container">
