Entrega7 Completa, sin desafio

--- a/my-profile.html
+++ b/my-profile.html
@@ -81,7 +81,7 @@
       <div class="row p-3">
         <div class="col-md-5">
           <label for="nombre" class="form-label">Primer nombre<strong>*</strong></label>
-          <input type="text" class="form-control" id="nombre" placeholder="Primer nombre" required onchange="saveProfileData()">
+          <input type="text" class="form-control" id="nombre" placeholder="Primer nombre"  onchange="saveProfileData()" required>
           <div class="valid-feedback">
             ¡Hola!
           </div>
@@ -91,14 +91,14 @@
         </div>
         <div class="col-md-5">
           <label for="segNombre" class="form-label">Segundo nombre</label>
-          <input type="text" class="form-control" id="segNombre" placeholder="Segundo nombre">
+          <input type="text" class="form-control" id="segNombre" placeholder="Segundo nombre" onchange="saveProfileData()">
         </div>
       </div>
   
       <div class="row p-3">
         <div class="col-md-5">
           <label for="apellido" class="form-label">Primer apellido<strong>*</strong></label>
-          <input type="text" class="form-control" id="apellido" placeholder="Primer apellido" required>
+          <input type="text" class="form-control" id="apellido" placeholder="Primer apellido" onchange="saveProfileData()" required>
           <div class="valid-feedback">
             ¡Genial!
           </div>
@@ -108,14 +108,14 @@
         </div>
         <div class="col-md-5">
           <label for="segApellido" class="form-label">Segundo apellido</label>
-          <input type="text" class="form-control" id="segApellido" placeholder="Segundo apellido">
+          <input type="text" class="form-control" id="segApellido" placeholder="Segundo apellido" onchange="saveProfileData()">
         </div>
       </div>
   
       <div class="row p-3">
         <div class="col-md-5">
           <label for="email" class="form-label">E-mail</label>
-          <input type="email" class="form-control" id="emailUser" placeholder="ejemplo@mail.com">
+          <input type="email" class="form-control" id="emailUser" placeholder="ejemplo@mail.com" onchange="saveProfileData()">
         </div>
         <div class="col-md-5">
           <label for="imagenUser" class="form-label">Seleccionar imagen de perfil</label>
@@ -126,7 +126,7 @@
       <div class="row p-3">
         <div class="col-md-5">
           <label for="tel" class="form-label">Telefono de Contacto<strong>*</strong></label>
-          <input type="number" class="form-control" id="tel" placeholder="0303-456" min="1" required>
+          <input type="number" class="form-control" id="tel" placeholder="0303-456" min="1" onchange="saveProfileData()" required>
           <div class="valid-feedback">
             ¡Se ve bien!
           </div>
