Correcion estetica menor

--- a/my-profile.html
+++ b/my-profile.html
@@ -73,7 +73,7 @@
           <h1>Perfil</h1>
         </div>
         <div class="col d-flex justify-content-end">
-          <img src="img/img_perfil.png" id="profileImg" class="img-responsive" width="30%">
+          <img src="img/img_perfil.png" id="profileImg" class="img-responsive" width="20%">
         </div>
       </div>
       <hr>
@@ -137,7 +137,7 @@
       </div>
       <br><br><br>
       <hr>
-      <button type="submit" class="btn btn-primary" onclick="validate()">Guardar cambios</button>
+      <button type="submit" class="btn btn-primary btn-lg active" onclick="validate()">Guardar cambios</button>
     </div>
     </form>
   </main>
