--- a/my-profile.html
+++ b/my-profile.html
@@ -119,7 +119,7 @@
         </div>
         <div class="col-md-5">
           <label for="imagenUser" class="form-label">Seleccionar imagen de perfil</label>
-          <input type="file" class="form-control" id="imagenUser">
+          <input type="file" class="form-control" id="imagenUser" onchange="readURL(this)">
         </div>
       </div>
   
