--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
        
           <!-- Dropdown de inicio de sesión -->
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="user">
+            <span class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="user">
               Iniciar Sesión
-            </a>
+            </span>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="user">
               <li><a class="dropdown-item" href="login.html"><i class="bi bi-door-open-fill"></i> Iniciar Sesión</a></li>
               <li><a class="dropdown-item" href="my-profile.html"><i class="bi bi-person-fill"></i> Perfil</a></li>
@@ -105,28 +105,6 @@
   <script src="js/index.js"></script>
   <script src="js/init.js"></script>
   <script href="login.js"></script>
-
-      <!-- Mostrar nombre de usuario en item USER -->
-  <script>
-
-    /* Cierra sesión, quita el item del local Storage 
-      y reinicia el nombre de la etiqueta*/
-    function cerrarSesion() {
-      localStorage.removeItem("userInput");
-      user.innerHTML = "Iniciar Sesión";
-    }
-
-    function loginUser() {
-      let user = document.getElementById("user");
-      let getUserInput = localStorage.getItem("userInput");
-
-      if (getUserInput !== 'null') {
-        user.innerHTML = getUserInput;
-      }
-    }
-
-
-  </script>
 
 </body>
 
